--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.26.5",
     "node-sass": "^4.13.0",
+    "radium": "^0.26.0",
     "react": "^16.12.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
