--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "animate.css": "^3.7.2",
     "antd": "^3.26.5",
     "node-sass": "^4.13.0",
     "radium": "^0.26.0",
     "react": "^16.12.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-animations": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
