--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-animations": "^1.0.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
     "react-scripts": "3.3.0",
     "react-scroll": "^1.7.15"
   },
